<resources>
    <string name="app_name">Gallery</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="password">Password</string>
    <string name="someone_gmail_com">someone@gmail.com</string>
    <string name="nice_to_see_you_againi">Nice to see you againi!</string>
    <string name="welcome">Welcome!</string>
    <string name="already_a_member">Already a member?</string>
    <string name="username">Username</string>
    <string name="add_image">Add Image!</string>
    <string name="add_profile_image">Add Profile Image</string>
</resources>
