<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@drawable/background">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loginProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:indeterminate="true"
        android:indeterminateTint="@color/primary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:fontFamily="@font/bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="28dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteLight"
        android:text="@string/nice_to_see_you_againi"
        android:fontFamily="@font/regular"
        android:textSize="16sp"
        android:layout_marginStart="38dp"
        android:layout_below="@id/welcomeText"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/loginemailfield"
        android:layout_below="@id/subWelcomeText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/someone_gmail_com"
        android:gravity="center"
        android:textColorHint="@color/hintAccentLight"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/loginemailfield"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        android:textColorHint="@color/hintAccentLight"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:background="@drawable/loginbtnstyle"
        android:text="Login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_below="@id/passwordEditText"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_not_a_member"
        android:textColor="@color/accent"
        android:textSize="16sp"
        android:fontFamily="@font/lignt"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/registerText"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/registerText"
        android:fontFamily="@font/lignt"
        android:text="Register."
        android:textColor="@color/primary"
        android:textSize="16sp" />


</RelativeLayout>
